crates/rupa-sql/tests/snapshots/postgres__insert_returning.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&insert::<User>().value(&User::sample()).returning_one())"
---
INSERT INTO "app"."users" ("id", "email", "nickname", "active", "created", "prefs", "old_prefs") VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING "id", "email", "nickname", "active", "created", "prefs", "old_prefs"
$1 = I64(7)
$2 = Text("a@b.c")
$3 = Null(Text)
$4 = Bool(true)
$5 = TimestampTz(2023-11-14T22:13:20Z)
$6 = Json(Object {"beta": Bool(true), "theme": String("dark")})
$7 = Null(Json)
