crates/rupa-sql/tests/snapshots/postgres__json_path_as_json.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(bool_expr(node)))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "prefs" -> 'a' -> 'b' IS NULL
