crates/rupa-sql/tests/snapshots/postgres__json_path_as_raw_op_operand_is_parenthesized.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(raw))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE $1 <@ ("prefs" -> 'a')
$1 = Json(Object {"x": Number(1)})
