crates/rupa-sql/tests/snapshots/postgres__json_path_cast.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&where_(User::PREFS.path(\"beta\").cast::<bool>().eq(true)))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE CAST("prefs" ->> 'beta' AS boolean) = $1
$1 = Bool(true)
