crates/rupa-sql/tests/snapshots/postgres__json_path_nested_and_index.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(cond))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "prefs" -> 'a' -> 0 ->> 'b' IS NOT NULL
