crates/rupa-sql/tests/snapshots/postgres__json_path_text.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&where_(User::PREFS.path(\"theme\").text().eq(\"dark\")))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "prefs" ->> 'theme' = $1
$1 = Text("dark")
