crates/rupa-sql/tests/snapshots/postgres__like.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&where_(User::EMAIL.like(\"%@example.com\")))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "email" LIKE $1
$1 = Text("%@example.com")
