crates/rupa-sql/tests/snapshots/postgres__not_of_bool_column_and_comparison_of_comparison.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: "pg(&where_(!bind(true))) + \"\\n---\\n\" + &pg(&where_(cmp.eq(true)))"
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE NOT $1
$1 = Bool(true)
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE ("id" = $1) = $2
$1 = I64(1)
$2 = Bool(true)
