crates/rupa-sql/tests/snapshots/postgres__null_tests.snap
---
source: crates/rupa-sql/tests/postgres.rs
expression: pg(&where_(cond))
---
SELECT "id", "email", "nickname", "active", "created", "prefs", "old_prefs" FROM "app"."users" WHERE "nickname" IS NULL AND "old_prefs" IS NOT NULL AND "prefs" IS NULL
